--- a/src/app/components/updateproduit/updateproduit.component.html
+++ b/src/app/components/updateproduit/updateproduit.component.html
@@ -46,14 +46,14 @@
               <input id="quantite" type="number" formControlName="quantite" name="quantite"class="form-control" placeholder="Quantité" required>
             </div>
           </div>
-           <!--Disponible-->
+           <!--disponible-->
            <div class="row">
             <div class="col-md-12 form-group mb-3">
               <label for="disponible" class="form-label">Disponibilité</label>
               <input id="disponible" type="text" formControlName="disponible" name="disponible"class="form-control" placeholder="Disponibilité" required>
             </div>
           </div>
-          <!--Categorie-->
+          <!--categorie-->
           <div class="row">
             <div class="col-md-12 form-group mb-3">
               <label for="categorieId" class="form-label">categorie</label>
